// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codec byte goldens (#22) > seed 1: encoded keyframe byte hash 1`] = `
{
  "byteLength": 73900,
  "hash": "77da457f",
}
`;

exports[`codec byte goldens (#22) > seed 42: encoded keyframe byte hash 1`] = `
{
  "byteLength": 73900,
  "hash": "14709952",
}
`;

exports[`codec byte goldens (#22) > seed 1337: encoded keyframe byte hash 1`] = `
{
  "byteLength": 73900,
  "hash": "e3e077d3",
}
`;
